wp_contextual/tests/error_wp_contextual_field_without_wp_context.rs
use wp_contextual::WPContextual;

#[derive(WPContextual)]
pub struct SparseFoo {
    #[WPContextualField]
    pub bar: Option<u32>,
}

fn main() {}

uniffi::setup_scaffolding!();
